--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     hikari:
-      username: sa
-      password:
+      username: jonggae
+      password: 1234
   h2:
     console:
       enabled: true
