--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+logging:
+  level:
+    your:
+      package:
+        name: DEBUG
