InvitationController에 대한 테스트 코드 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,9 @@ logging:
     your:
       package:
         name: DEBUG
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
