생성된 링크 주소를 yml파일로 관리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ server:
       charset: UTF-8
       enabled: true
       force: true
+  invitation:
+    link:
+      base-url: https://testdomain.com/invitation/
